plugins {
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'com.storage'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'org.glassfish:jakarta.el:4.0.2'
    implementation 'org.jetbrains.kotlin:kotlin-reflect'
    implementation("org.postgresql:postgresql:42.7.3")
    implementation 'com.google.guava:guava:32.0.1-android'
    implementation 'io.netty:netty-all:4.1.121.Final'
    implementation 'org.apache.zookeeper:zookeeper:3.8.2'

    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.6.20.Final'

    implementation 'org.apache.curator:curator-framework:5.5.0'
    implementation 'org.apache.curator:curator-recipes:5.5.0'

    implementation 'com.googlecode.xmemcached:xmemcached:2.4.8'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.yaml:snakeyaml'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
    testImplementation 'org.mockito:mockito-core:5.12.0'


    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    systemProperty 'mockito.inline.enabled', 'false'

    jvmArgs '-XX:+EnableDynamicAgentLoading'
}
